// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<PostListTemplate /> > should render with posts 1`] = `
<DocumentFragment>
  <div
    class="_layout_522a10"
  >
    <div
      class="ps-my-0 ps-pt-10 ps-px-5 ps-text-xl"
    >
      <nav>
        <ul
          class="ps-flex ps-flex-row ps-flex-wrap sm:ps-flex-nowrap ps-list-none ps-justify-between ps-max-w-screen-sm ps-mx-auto"
        >
          <li
            class="ps-mr-auto"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/posts"
            >
              📰 Posts
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="_layoutMain_522a10"
    >
      <div>
        <header
          class="_header_be6ffb"
        >
          <h1
            class="_headerTitle_be6ffb"
          >
            Posts
          </h1>
        </header>
        <section>
          <div
            class="ps-max-w-full"
          >
            <section>
              <div
                class="ps-mt-12 ps-grid ps-gap-5 ps-max-w-content ps-mx-auto lg:ps-max-w-screen-lg lg:ps-grid-cols-3"
              >
                <a
                  href="/posts/example-post-with-image"
                >
                  <div
                    class="_card_91079f"
                  >
                    <div
                      class="_cardImg_91079f"
                    >
                      <img
                        alt="Example Post with Image"
                        src="undefined/app/uploads/2022/09/pizza.jpeg"
                      />
                    </div>
                    <h2
                      class="_cardTitle_91079f"
                    >
                      Example Post with Image →
                    </h2>
                  </div>
                </a>
                <a
                  href="/posts/hello-world"
                >
                  <div
                    class="_card_91079f"
                  >
                    <div
                      class="_cardImg_91079f"
                    >
                      <div
                        class="_gradientPlaceholder_91079f"
                      />
                    </div>
                    <h2
                      class="_cardTitle_91079f"
                    >
                      Hello world! →
                    </h2>
                  </div>
                </a>
              </div>
            </section>
            <div
              class="ps-sticky lg:ps-bottom-12 ps-bottom-4 ps-mt-10"
            />
          </div>
        </section>
      </div>
    </main>
    <footer
      class="ps-w-full ps-text-white ps-bg-black ps-p-4 ps-mt-12"
    >
      <nav
        class="ps-flex ps-flex-col ps-max-w-lg ps-mx-auto lg:ps-max-w-screen-lg"
      >
        <ul />
      </nav>
      <div
        class="ps-flex ps-my-4 ps-p-2"
      >
        <span
          class="_footerCopy_522a10"
        >
          © 2023 Built with 
          <a
            class="text-white hover:text-blue-100 underline"
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            class="text-blue-500 underline hover:text-blue-100"
            href="https://wordpress.com/"
          >
            WordPress
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`<PostTemplate /> > should render a post 1`] = `
<DocumentFragment>
  <div
    class="_layout_522a10"
  >
    <div
      class="ps-my-0 ps-pt-10 ps-px-5 ps-text-xl"
    >
      <nav>
        <ul
          class="ps-flex ps-flex-row ps-flex-wrap sm:ps-flex-nowrap ps-list-none ps-justify-between ps-max-w-screen-sm ps-mx-auto"
        >
          <li
            class="ps-mr-auto"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/"
            >
              🏠 Home
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/posts"
            >
              📰 Posts
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/pages"
            >
              📑 Pages
            </a>
          </li>
          <li
            class="ps-mx-4"
          >
            <a
              class="ps-font-sans hover:ps-underline"
              href="/examples"
            >
              ⚛️ Examples
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <main
      class="_layoutMain_522a10"
    >
      <article
        class="ps-prose ps-max-w-none xs:ps-prose-xs md:ps-prose-md lg:ps-prose-lg ps-mt-10 ps-mx-auto ps-py-4 ps-px-12"
      >
        <section
          class="ps-prose xs:ps-prose-xs md:ps-prose-md lg:ps-prose-lg ps-mt-10 ps-max-w-screen lg:ps-max-w-screen-lg md:ps-max-w-screen-md sm:ps-max-w-screen-sm ps-mx-auto"
        >
          <h1>
            Example Post with Image
          </h1>
          <p
            class="ps-text-sm ps-text-gray-600"
          >
            Tue Sep 13 2022
          </p>
          <button
            class="ps-font-normal ps-underline ps-cursor-pointer"
          >
            Back →
          </button>
        </section>
        <div
          class="ps-mt-12 ps-max-w-screen ps-mx-auto lg:ps-max-w-screen-lg [&*>img]:ps-rounded-lg"
        >
          <div
            class="ps-relative ps-mb-10 ps-min-h-[50vh]"
          >
            <img
              alt="Example Post with Image"
              src="https://dev-cobs-decoupled-wp.pantheonsite.io/app/uploads/2022/09/pizza.jpeg"
            />
          </div>
        </div>
        <div
          class="ps-break-words ps-mt-12 _content_bddb62"
        >
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
          

        </div>
      </article>
    </main>
    <footer
      class="ps-w-full ps-text-white ps-bg-black ps-p-4 ps-mt-12"
    >
      <nav
        class="ps-flex ps-flex-col ps-max-w-lg ps-mx-auto lg:ps-max-w-screen-lg"
      >
        <ul />
      </nav>
      <div
        class="ps-flex ps-my-4 ps-p-2"
      >
        <span
          class="_footerCopy_522a10"
        >
          © 2023 Built with 
          <a
            class="text-white hover:text-blue-100 underline"
            href="https://nextjs.org/"
          >
            Next.js
          </a>
           and 
          <a
            class="text-blue-500 underline hover:text-blue-100"
            href="https://wordpress.com/"
          >
            WordPress
          </a>
        </span>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
